Fix form bugs
Fix copied animation - Only animate for copied url
Fix statistics cards overlap with form
Add scripts for animate on scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -614,16 +614,28 @@ end of nav && hero section
   }
 }
 
-.form-section {
+.form-section,
+.advanced {
   position: relative;
   top: -120px;
-  padding: 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
-  .form-section {
+  .form-section,
+  .advanced {
     top: -162px;
   }
+}
+
+@media screen and (min-width: 1020px) {
+  .form-section,
+  .advanced {
+    top: -91px;
+  }
+}
+
+.form-section {
+  padding: 1.5rem;
 }
 
 @media screen and (min-width: 1020px) {
@@ -771,7 +783,7 @@ end of nav && hero section
   text-align: justify;
   display: block;
   width: 100%;
-  padding: .8rem;
+  padding: 0.8rem;
   border-radius: 3.5px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
@@ -780,7 +792,7 @@ end of nav && hero section
 
 @media screen and (min-width: 768px) {
   .form__comment {
-    padding: .8rem;
+    padding: 0.8rem;
   }
 }
 
@@ -795,13 +807,13 @@ end of nav && hero section
   text-align: justify;
   display: block;
   width: 100%;
-  padding: .8rem;
+  padding: 0.8rem;
   border-radius: 3.5px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(241, 238, 238, 0.2);
   text-align: center;
-  padding: .8rem;
+  padding: 0.8rem;
   background-color: #2acfcf;
   color: #f4f1f8;
   font-weight: 700;
@@ -820,7 +832,6 @@ end of nav && hero section
 
 .dropedown-container {
   width: 100%;
-  height: 500px;
   display: none;
 }
 
@@ -988,7 +999,7 @@ end of nav && hero section
   color: white;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  font-size: .99rem;
+  font-size: 0.99rem;
 }
 
 @media screen and (min-width: 1020px) {
@@ -1017,44 +1028,14 @@ end of nav && hero section
           animation: bounce 1s alternate;
 }
 
-.bounce-2 {
-  border: 2px solid white;
-  -webkit-animation: bounce 1s linear;
-          animation: bounce 1s linear;
-}
-
-.bounce-3 {
-  border: 2px solid white;
-  -webkit-animation: bounce 1s linear;
-          animation: bounce 1s linear;
-}
-
 .advanced {
-  margin-top: -7rem;
   padding: 0 1.5rem 6rem 1.5rem;
   width: 100%;
 }
 
-@media screen and (min-width: 768px) {
-  .advanced {
-    margin-top: -7rem;
-  }
-}
-
 @media screen and (min-width: 1020px) {
   .advanced {
-    margin-top: -8rem;
     padding-bottom: 8rem;
-  }
-}
-
-.advanced__change {
-  margin-top: -4rem;
-}
-
-@media screen and (min-width: 1020px) {
-  .advanced__change {
-    margin-top: -25rem;
   }
 }
 
@@ -1115,7 +1096,9 @@ end of nav && hero section
   }
 }
 
-.recognition, .detail, .customizable {
+.recognition,
+.detail,
+.customizable {
   width: 100%;
   padding: 1rem;
   background-color: white;
@@ -1126,7 +1109,9 @@ end of nav && hero section
 }
 
 @media screen and (min-width: 1020px) {
-  .recognition, .detail, .customizable {
+  .recognition,
+  .detail,
+  .customizable {
     width: 30%;
     height: 243px;
     margin: 1rem;
@@ -1134,7 +1119,9 @@ end of nav && hero section
   }
 }
 
-.recognition__img, .detail__img, .customizable__img {
+.recognition__img,
+.detail__img,
+.customizable__img {
   display: block;
   margin: auto;
   position: relative;
@@ -1149,7 +1136,9 @@ end of nav && hero section
 }
 
 @media screen and (min-width: 1020px) {
-  .recognition__img, .detail__img, .customizable__img {
+  .recognition__img,
+  .detail__img,
+  .customizable__img {
     top: -50px;
     width: 75px;
     height: 75px;
@@ -1158,7 +1147,9 @@ end of nav && hero section
   }
 }
 
-.recognition__title, .detail__title, .customizable__title {
+.recognition__title,
+.detail__title,
+.customizable__title {
   font-family: "Poppins", sans-serif;
   width: 63%;
   display: block;
@@ -1168,20 +1159,26 @@ end of nav && hero section
 }
 
 @media screen and (min-width: 768px) {
-  .recognition__title, .detail__title, .customizable__title {
+  .recognition__title,
+  .detail__title,
+  .customizable__title {
     width: 27%;
   }
 }
 
 @media screen and (min-width: 1020px) {
-  .recognition__title, .detail__title, .customizable__title {
+  .recognition__title,
+  .detail__title,
+  .customizable__title {
     text-align: start;
     width: 109%;
     font-size: 10x;
   }
 }
 
-.recognition__body, .detail__body, .customizable__body {
+.recognition__body,
+.detail__body,
+.customizable__body {
   font-family: "Poppins", sans-serif;
   color: #9e9aa7;
   font-size: 14px;
@@ -1192,7 +1189,9 @@ end of nav && hero section
 }
 
 @media screen and (min-width: 1020px) {
-  .recognition__body, .detail__body, .customizable__body {
+  .recognition__body,
+  .detail__body,
+  .customizable__body {
     text-align: start;
     font-size: 10px;
     width: 94%;
@@ -1250,7 +1249,7 @@ end of nav && hero section
 #text {
   font-family: "Poppins", sans-serif;
   color: #f46262;
-  font-size: .6rem;
+  font-size: 0.6rem;
   padding: 1rem 0;
   display: block;
 }
